fixed readability issue with "select" element

--- a/foosball-front-end/src/App.css
+++ b/foosball-front-end/src/App.css
@@ -441,3 +441,7 @@ tr td {
   background-color: #009ddf;
   color: white;
 }
+
+select option {
+  color: black;
+}
